[gd_scene load_steps=5 format=3 uid="uid://tkrflwxphc4h"]

[ext_resource type="Script" path="res://scripts/interface builders/inventory/ItemCard.gd" id="1_7xdgj"]
[ext_resource type="Texture2D" uid="uid://dno3n4pt36yrk" path="res://assets/interface/Icons/item icons/EquipmentFrame.png" id="2_hrbns"]
[ext_resource type="PackedScene" uid="uid://cy7ro4867yebk" path="res://scenes/formatting standards/label.tscn" id="3_s2l2s"]
[ext_resource type="StyleBox" uid="uid://c4cw6xtmw832l" path="res://resources/styles/ButtonStyle.tres" id="4_yg40r"]

[node name="ItemCard" type="Control" node_paths=PackedStringArray("itemFrame", "icon", "quantity", "button", "showDesc")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -240.0
offset_right = -103.0
offset_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xdgj")
itemFrame = NodePath("Frame")
icon = NodePath("Icon")
quantity = NodePath("Quantity")
button = NodePath("ItemButton")
showDesc = NodePath("ShowDescTimer")

[node name="Frame" type="Sprite2D" parent="."]
position = Vector2(16, 16)
texture = ExtResource("2_hrbns")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(16, 16)

[node name="Quantity" parent="." instance=ExtResource("3_s2l2s")]
layout_mode = 0
offset_left = 7.0
offset_top = 24.0
offset_right = 25.0
offset_bottom = 38.0
text = "1"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/focus = ExtResource("4_yg40r")
theme_override_styles/disabled_mirrored = ExtResource("4_yg40r")
theme_override_styles/disabled = ExtResource("4_yg40r")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_yg40r")
theme_override_styles/hover_pressed = ExtResource("4_yg40r")
theme_override_styles/hover_mirrored = ExtResource("4_yg40r")
theme_override_styles/hover = ExtResource("4_yg40r")
theme_override_styles/pressed_mirrored = ExtResource("4_yg40r")
theme_override_styles/pressed = ExtResource("4_yg40r")
theme_override_styles/normal_mirrored = ExtResource("4_yg40r")
theme_override_styles/normal = ExtResource("4_yg40r")

[node name="ShowDescTimer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="ItemButton" to="." method="startDescTimer"]
[connection signal="button_up" from="ItemButton" to="." method="buttonUp"]
[connection signal="timeout" from="ShowDescTimer" to="." method="showDescription"]
